--- a/SegundoP4/nbproject/private/private.properties
+++ b/SegundoP4/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-8.0.29.jar-1=D:\\Joan\\0_UOC\\POO_BBDD\\00_JavaUtils\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 user.properties.file=C:\\Users\\joanl\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
